Prepare plugins for Markdowning

--- a/files/en-us/plugins/blocking_by_domain/index.html
+++ b/files/en-us/plugins/blocking_by_domain/index.html
@@ -5,7 +5,7 @@ slug: Plugins/Blocking_By_Domain
 <p>Plugins such as Flash are a performance and security problem for Firefox users. However, some legacy Flash content hasn't yet been ported to HTML and is valuable to users. Rather than block plugins entirely, Firefox is limiting the impact of plugins by blocking certain domains from using plugins. These blocks improve Firefox security and performance and also make the click-to-activate feature more valuable to users by reducing unnecessary prompts.</p>
 
 <div class="note">
-<p>According to the Firefox plugin <a href="/en-US/docs/Plugins/Roadmap">roadmap</a>, the plugin block list is planned for Firefox 55.</p>
+<p><strong>Note:</strong> According to the Firefox plugin <a href="/en-US/docs/Plugins/Roadmap">roadmap</a>, the plugin block list is planned for Firefox 55.</p>
 </div>
 
 <h2 id="Effects_of_Plugin_Blocking">Effects of Plugin Blocking</h2>
