--- a/files/en-us/plugins/flash_to_html5/clipboard/index.html
+++ b/files/en-us/plugins/flash_to_html5/clipboard/index.html
@@ -10,7 +10,7 @@ tags:
   - Selection
   - execCommand
 ---
-<p class="summary">Flash's Clipboard API used to be the only available means for creating advanced clipboard functionality, but this is now available in web standards.</p>
+<p>Flash's Clipboard API used to be the only available means for creating advanced clipboard functionality, but this is now available in web standards.</p>
 
 <p>Operating systems all have standard clipboard (i.e. Copy/Paste/Cut) functionality built in, but what if you want to do something a bit more complex, such as having a button that triggers the copying of a certain text selection?</p>
 
