--- a/files/en-us/plugins/flash_to_html5/index.html
+++ b/files/en-us/plugins/flash_to_html5/index.html
@@ -12,7 +12,7 @@ tags:
   - Video
   - conversion
 ---
-<p class="summary">This set of articles provides you with information on how to migrate existing Flash content and functionality to HTML and JavaScript.</p>
+<p>This set of articles provides you with information on how to migrate existing Flash content and functionality to HTML and JavaScript.</p>
 
 <h2 id="Background">Background</h2>
 
