--- a/files/en-us/plugins/flash_to_html5/video/advertising/index.html
+++ b/files/en-us/plugins/flash_to_html5/video/advertising/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <p>{{PreviousMenuNext("Plugins/Flash_to_HTML5/Video/DRM_and_authentication", "Plugins/Flash_to_HTML5/Video/Distribution", "Plugins/Flash_to_HTML5/Video")}}</p>
 
-<p class="summary">You may also want to incorporate advertising into your video delivery system, via an ad network.</p>
+<p>You may also want to incorporate advertising into your video delivery system, via an ad network.</p>
 
 <h2 id="In_a_nutshell">In a nutshell</h2>
 
