--- a/files/en-us/plugins/flash_to_html5/video/distribution/index.html
+++ b/files/en-us/plugins/flash_to_html5/video/distribution/index.html
@@ -7,7 +7,7 @@ tags:
 ---
 <p>{{PreviousMenuNext("Plugins/Flash_to_HTML5/Video/Advertising", "Plugins/Flash_to_HTML5/Video/Players", "Plugins/Flash_to_HTML5/Video")}}</p>
 
-<p class="summary">A CDN is a popular choice for effective delivery of media content.</p>
+<p>A CDN is a popular choice for effective delivery of media content.</p>
 
 <h2 id="CDN_requirements">CDN requirements</h2>
 
