--- a/files/en-us/plugins/flash_to_html5/video/drm_and_authentication/index.html
+++ b/files/en-us/plugins/flash_to_html5/video/drm_and_authentication/index.html
@@ -12,7 +12,7 @@ tags:
 ---
 <p>{{PreviousMenuNext("Plugins/Flash_to_HTML5/Video/File_format_conversion", "Plugins/Flash_to_HTML5/Video/Advertising", "Plugins/Flash_to_HTML5/Video")}}</p>
 
-<p class="summary">If your media requires authentication/rights to access, you'll need to work out how to hook up the necessary digital rights management and authentication mechanisms.</p>
+<p>If your media requires authentication/rights to access, you'll need to work out how to hook up the necessary digital rights management and authentication mechanisms.</p>
 
 <p>You can either work directly with the listed tools and technologies for DRM, or through a third-party vendor such as <a href="https://www.brightcove.com/en/online-video-platform/content-protection-encryption-drm">Brightcove</a>, <a href="https://www.widevine.com/">Google</a> or <a href="https://www.adobe.com/uk/marketing-cloud/primetime/digital-rights-management.html">Adobe</a>. The advantage of using a third-party vendor's system is that generally they will provide or assist with code for checking which platform the user is on, coordinating with the relevant key system for that platform to handle the DRM, etc.</p>
 
