--- a/files/en-us/plugins/flash_to_html5/video/file_format_conversion/index.html
+++ b/files/en-us/plugins/flash_to_html5/video/file_format_conversion/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <p>{{PreviousMenuNext("Plugins/Flash_to_HTML5/Video/Planning", "Plugins/Flash_to_HTML5/Video/DRM_and_authentication", "Plugins/Flash_to_HTML5/Video")}}</p>
 
-<p class="summary">Once you've planned out what you want to do, the first step is to convert your video (or audio) files into formats compatible with HTML embedding.</p>
+<p>Once you've planned out what you want to do, the first step is to convert your video (or audio) files into formats compatible with HTML embedding.</p>
 
 <h2 id="What_files_have_you_got">What files have you got?</h2>
 
