--- a/files/en-us/plugins/flash_to_html5/video/index.html
+++ b/files/en-us/plugins/flash_to_html5/video/index.html
@@ -7,14 +7,14 @@ tags:
   - Plugins
   - Video
 ---
-<p class="summary">This resource provides an outline of all the topics you need to know about to convert Flash video to native HTML, plus resources covering all the finer details.</p>
+<p>This resource provides an outline of all the topics you need to know about to convert Flash video to native HTML, plus resources covering all the finer details.</p>
 
 <h2 id="In_a_nutshell">In a nutshell</h2>
 
 <p>HTML5 video is enabled through browser support for video and audio playback, Javascript extensions to control that playback, and ecosystem support for critical functions such as content protection and advertising. </p>
 
 <div class="note">
-<p><strong>Note</strong>: Most of the processes described in the below articles talk about video, but audio content works in such a similar way that they are generally applicable to audio too.</p>
+<p><strong>Note:</strong> Most of the processes described in the below articles talk about video, but audio content works in such a similar way that they are generally applicable to audio too.</p>
 </div>
 
 <h2 id="Planning">Planning</h2>
@@ -60,7 +60,7 @@ tags:
 
 <h3 id="Desktop">Desktop</h3>
 
-<table class="style1">
+<table>
  <thead>
   <tr>
    <th>Browser</th>
@@ -125,7 +125,7 @@ tags:
 
 <h3 id="Mobile">Mobile</h3>
 
-<table class="style1">
+<table>
  <thead>
   <tr>
    <th>Browser</th>
