--- a/files/en-us/plugins/flash_to_html5/video/planning/index.html
+++ b/files/en-us/plugins/flash_to_html5/video/planning/index.html
@@ -17,7 +17,7 @@ tags:
 ---
 <p>{{NextMenu("Plugins/Flash_to_HTML5/Video/File_format_conversion", "Plugins/Flash_to_HTML5/Video")}}</p>
 
-<p class="summary">Transitioning from Flash to HTML5 can take several months and may require new skills and software. This guide shows you how to plan for that transition.</p>
+<p>Transitioning from Flash to HTML5 can take several months and may require new skills and software. This guide shows you how to plan for that transition.</p>
 
 <h2 id="Auditing_what_you_have">Auditing what you have</h2>
 
