--- a/files/en-us/plugins/flash_to_html5/video/players/index.html
+++ b/files/en-us/plugins/flash_to_html5/video/players/index.html
@@ -13,7 +13,7 @@ tags:
 ---
 <p>{{PreviousMenuNext("Plugins/Flash_to_HTML5/Video/Distribution", "Plugins/Flash_to_HTML5/Video/Subtitles_captions", "Plugins/Flash_to_HTML5/Video")}}</p>
 
-<p class="summary">There are a number of ways to play back web media depending on the scale of your needs and whether you need ad integration and digital rights management.</p>
+<p>There are a number of ways to play back web media depending on the scale of your needs and whether you need ad integration and digital rights management.</p>
 
 <p>For media playback on the web, a spectrum of options is available including:</p>
 
