--- a/files/en-us/plugins/flash_to_html5/video/subtitles_captions/index.html
+++ b/files/en-us/plugins/flash_to_html5/video/subtitles_captions/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <p>{{PreviousMenu("Plugins/Flash_to_HTML5/Video/Players", "Plugins/Flash_to_HTML5/Video")}}</p>
 
-<p class="summary">Just as audio and video may need transcoding for the web, subtitles and closed captions may also need to be converted and made available.</p>
+<p>Just as audio and video may need transcoding for the web, subtitles and closed captions may also need to be converted and made available.</p>
 
 <h2 id="Getting_subtitles_and_closed_captions">Getting subtitles and closed captions</h2>
 
