--- a/files/en-us/plugins/guide/browser_side_plug-in_api/index.html
+++ b/files/en-us/plugins/guide/browser_side_plug-in_api/index.html
@@ -9,25 +9,12 @@ tags:
   - Plugins
   - Reference
 ---
-<div class="noinclude">
-<div class="prevnext" style="text-align: right;">
-    <p><a href="/en-US/docs/Gecko_Plugin_API_Reference/Plug-in_Side_Plug-in_API" style="float: left;">« Previous</a><a href="/en-US/docs/Gecko_Plugin_API_Reference/Scripting_plugins">Next  »</a></p>
-</div>
-</div>
 
 <p>This chapter describes methods in the plug-in API that are available from the browser. The names of all of these methods begin with <code>NPN_</code> to indicate that they are implemented by the browser and called by the plug-in. For an overview of how these two sides of the plug-in API interact, see the <a href="/en-US/docs/Gecko_Plugin_API_Reference/Plug-in_Basics#How_Plug-ins_Work">How Plug-ins Work</a> and <a href="/en-US/docs/Gecko_Plugin_API_Reference/Plug-in_Basics#Overview_of_Plug-in_Structure">Overview of Plug-in Structure</a> sections in the introduction.</p>
 
-<div class="warning"><strong>Warning:</strong> You must only call these from the main thread; calling them from other threads is not supported and may have unpredictable results.</div>
+<div class="warning"><p><strong>Warning:</strong> You must only call these from the main thread; calling them from other threads is not supported and may have unpredictable results.</p></div>
 
-<div class="noinclude">
 <h3 id="Netscape_Plug-in_Method_Summary">Netscape Plug-in Method Summary</h3>
-</div>
-
-<div class="noinclude">
-<div class="prevnext" style="text-align: right;">
-    <p><a href="/en-US/docs/Gecko_Plugin_API_Reference/Plug-in_Side_Plug-in_API" style="float: left;">« Previous</a><a href="/en-US/docs/Gecko_Plugin_API_Reference/Scripting_plugins">Next  »</a></p>
-</div>
-</div>
 
 <dl>
  <dt><code><a href="/en-US/docs/Mozilla/Add-ons/Plugins/Reference/NPN_DestroyStream">NPN_DestroyStream</a></code></dt>
