--- a/files/en-us/plugins/guide/constants/index.html
+++ b/files/en-us/plugins/guide/constants/index.html
@@ -6,21 +6,20 @@ tags:
   - NPAPI
   - Plugins
 ---
-<div class="prevnext" style="text-align: right;">
-    <p><a href="/en-US/docs/Gecko_Plugin_API_Reference/Structures" style="float: left;">« Previous</a><br></p>
-</div>
 
 <p>This section is a reference to the program definitions used by the Plug-in API. All program definitions are found in <a href="https://dxr.mozilla.org/mozilla-central/source/modules/plugin/base/public/npapi.h" rel="custom">npapi.h</a>.</p>
 
 <h2 id="Error_Codes">Error Codes</h2>
 
 <table class="standard-table">
- <tbody>
+ <thead>
   <tr>
-   <td class="header">Code</td>
-   <td class="header">Value</td>
-   <td class="header">Description</td>
+   <th>Code</th>
+   <th>Value</th>
+   <th>Description</th>
   </tr>
+ </thead>
+ <tbody>
   <tr>
    <td><code>NPERR_NO_ERROR</code></td>
    <td>0</td>
@@ -97,12 +96,14 @@ tags:
 <h2 id="Result_Codes">Result Codes</h2>
 
 <table class="standard-table">
+ <thead>
+   <tr>
+    <th>Constant</th>
+    <th>Value</th>
+    <th>Description</th>
+   </tr>
+ </thead>
  <tbody>
-  <tr>
-   <td class="header">Constant</td>
-   <td class="header">Value</td>
-   <td class="header">Description</td>
-  </tr>
   <tr>
    <td><code>NPRES_DONE</code></td>
    <td>0</td>
@@ -124,12 +125,14 @@ tags:
 <h2 id="Plug-in_Version_Constants">Plug-in Version Constants</h2>
 
 <table class="standard-table">
- <tbody>
+ <thead>
   <tr>
-   <td class="header">Constant</td>
-   <td class="header">Value</td>
-   <td class="header">Description</td>
+   <th>Constant</th>
+   <th>Value</th>
+   <th>Description</th>
   </tr>
+ </thead>
+ <tbody>
   <tr>
    <td><code>NP_VERSION_MAJOR</code></td>
    <td>0</td>
@@ -146,12 +149,14 @@ tags:
 <h2 id="Version_Feature_Constants">Version Feature Constants</h2>
 
 <table class="standard-table">
- <tbody>
+ <thead>
   <tr>
-   <td class="header">NPVERS Constant: Version Feature Information</td>
-   <td class="header">Value</td>
-   <td class="header">Description</td>
+   <th>NPVERS Constant: Version Feature Information</th>
+   <th>Value</th>
+   <th>Description</th>
   </tr>
+ </thead>
+ <tbody>
   <tr>
    <td><code>NPVERS_HAS_STREAMOUTPUT</code></td>
    <td>8</td>
@@ -214,7 +219,3 @@ tags:
   </tr>
  </tbody>
 </table>
-
-<div class="prevnext" style="text-align: right;">
-    <p><a href="/en-US/docs/Gecko_Plugin_API_Reference/Structures" style="float: left;">« Previous</a><br></p>
-</div>
