--- a/files/en-us/plugins/index.html
+++ b/files/en-us/plugins/index.html
@@ -5,10 +5,10 @@ tags:
   - Flash
   - Plugins
 ---
-<p class="summary">Plugins are shared libraries that users can install to display content that the browser can't display natively.</p>
+<p>Plugins are shared libraries that users can install to display content that the browser can't display natively.</p>
 
 <div class="warning">
-<p><strong>Important</strong>: plugins are a legacy technology that are a security and performance problem for Firefox (and other browser) users. They may not be supported in the future. New content should not be written using Flash or any other plugin technology.</p>
+<p><strong>Warning:</strong> plugins are a legacy technology that are a security and performance problem for Firefox (and other browser) users. They may not be supported in the future. New content should not be written using Flash or any other plugin technology.</p>
 </div>
 
 <h2 id="Roadmap">Roadmap</h2>
